syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "GadgetCrucibleInfo.proto";

message GadgetPlayInfo {
	oneof PlayInfo {
		GadgetCrucibleInfo crucible_info = 21;
	}
	uint32 play_type = 1;
	uint32 duration = 2;
	repeated uint32 progress_stage_list = 3;
	uint32 start_cd = 4;
	uint32 start_time = 5;
	uint32 progress = 6;
}
